samples/_failures_safe/1761717028_1153bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f64c5f41.c: In function ‘main’:
./samples/SAFE/__tmp_f64c5f41.c:153:9: error: expected expression at end of input
  153 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_f64c5f41.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64c5f41.c:153:9: error: expected declaration or statement at end of input
